<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NSDroid</string>
    <string name="nation_flag">Nation flag</string>
    <string name="region_flag">Region flag</string>
    <string name="unknown_nation">Unknown nation %s</string>
    <string name="unknown_region">Unknown region %s</string>
    <string name="rate_limit_reached">Rate limit reached! Please wait and try again.</string>
    <string name="general_error">An error has occurred, please contact the developer.</string>
    <string name="io_error">An error occurred - please check your network connection.</string>
    <string name="unknown_error">An unknown error occurred.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="world_assembly">World Assembly</string>
    <string name="loading">Loading&#8230;</string>
    <string name="wa_delegate">WA Delegate</string>
    <string name="wa_member">WA Member</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="undefined_region">Undefined region</string>
    <string name="time_passed">%1$d %2$s ago</string>
    <string name="time_passed_days_hours">%1$d %2$s %3$d %4$s ago</string>
    <string name="none">None</string>
    <string name="xml_parser_exception">Error in XML. Please try again or report to android@limewoodmedia.com.</string>
    <string name="api_io_exception">Unknown error! Probably something changed on the NationStates website. Please report to android@limewoodmedia.com.</string>
    <string name="trillion">%1$s trillion</string>
    <string name="billion">%1$s billion</string>
    <string name="million">%1$s million</string>
    <string name="version">Version %s</string>
    <string name="logged_out">Logged out, session cleared.</string>
    <string name="logging_out">Logging out, clearing session. Please wait&#8230;</string>
    <string name="days_hours">%1$d days %2$d hours</string>
    <string name="hours_minutes">%1$d hours %2$d minutes</string>
    <plurals name="minutes">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>
    <string name="in_time">in %s</string>
    <string name="welcome">Welcome to NSDroid!</string>
    <string name="check_nation">Check</string>
    <string name="nation_hint">Your nation</string>
    <string name="welcome_title">Select your nation</string>
    <string name="welcome_text">Welcome to NSDroid!\n
        Please enter your nation\'s name below to set up the application.</string>
    <string name="select_nation">This is my nation!</string>
    <string name="add_new_nation">Add nation</string>
    <string name="add_nation_title">Add new nation</string>
    <string name="add_nation_info">Enter the name of the nation you want to add in the text field below.</string>
    <string name="add_nation_hint">Nation name</string>
    <string name="nation_already_added">Nation already added!</string>
    <string name="title_activity_nsdroid">NSDroid</string>
    <string name="recent_happenings">Recent events</string>
    <string name="latest_rmb_post">Latest RMB post</string>
    <string name="regional_happenings">Regional happenings</string>
    <string name="nation">Nation</string>
    <string name="influence">Influence</string>
    <string name="loading_nation">Travelling the region&#8230;</string>
    <string name="category">Category</string>
    <string name="civil_rights">Civil Rights</string>
    <string name="economy">Economy</string>
    <string name="political_freedoms">Political Freedoms</string>
    <string name="nation_banner">Nation banner</string>
    <string name="pretitle" translatable="false">The %s of</string>
    <string name="nation_endorsed">Endorsed</string>
    <string name="nation_not_endorsed">Not endorsed</string>
    <string name="nation_endorsed_msg">Nation endorsed!</string>
    <string name="nation_unendorsed_msg">Nation unendorsed!</string>
    <string name="endorsements_title">Endorsements</string>
    <string name="nation_overview_header">Overview</string>
    <string name="nation_people_header">People</string>
    <string name="nation_people_title">Leading Causes of Death</string>
    <string name="nation_government_header">Government</string>
    <string name="nation_government_title">%1$s Government Expenditure</string>
    <string name="nation_government_size">%1$s %2$ss</string>
    <string name="nation_government_percent">%1$s%% of GDP</string>
    <string name="nation_economy_header">Economy</string>
    <string name="nation_economy_title">The %1$s Economy</string>
    <string name="nation_economy_gdp">GDP: %1$s %2$ss</string>
    <string name="nation_economy_gdppc">%1$s %2$ss per person</string>
    <string name="nation_economy_poorest">Poorest 10%%: %1$s %2$ss per person</string>
    <string name="nation_economy_richest">Richest 10%%: %1$s %2$ss per person</string>
    <string name="world_rank">World Rank</string>
    <string name="region_rank">Region Rank</string>
    <string name="of_num">of %1$s</string>
    <string name="wfe">World Factbook Entry</string>
    <string name="region">Region</string>
    <string name="wad">WA Delegate</string>
    <string name="founder">Founder</string>
    <string name="no_wad">None</string>
    <string name="loading_region">Travelling the world&#8230;</string>
    <string name="moved_to_region">Moved to region %s</string>
    <string name="moved_to_region_failed">Failed to move to region %s. It may be password-protected.</string>
    <string name="region_password_title">Regional password required</string>
    <string name="region_password_text">Please enter the region\'s password to move here.</string>
    <string name="wfe_title">WFE</string>
    <string name="rmb">Regional Message Board</string>
    <string name="rmb_abbr">RMB</string>
    <string name="rmb_title">RMB</string>
    <string name="message_error">Could not post message. Please check your password and Internet connection.</string>
    <string name="message_posted">Your message has been lodged!</string>
    <string name="message_here">Write your message here</string>
    <string name="close">Close</string>
    <string name="lodge">Lodge</string>
    <string name="loading_rmb">Fetching banter&#8230;</string>
    <string name="rmb_post_no_text">That wasn\'t very interesting, now was it?</string>
    <string name="loading_on_rmb_post">Spreading propaganda&#8230;</string>
    <string name="previous_page">Previous page</string>
    <string name="go_to_page">Go to page</string>
    <string name="next_page">Next page</string>
    <string name="rmb_go_to_page_title">Set offset page</string>
    <string name="rmb_go_to_page_message">Set the offset page to use (0 = last page)</string>
    <string name="message_deleted_by_author">Message deleted by author</string>
    <string name="rmb_context_menu_quote">Quote post</string>
    <string name="issues_header">%1$s decides</string>
    <string name="issues_title">Issues for %1$s:</string>
    <string name="issues_dismiss_all_title">Dismiss all issues</string>
    <string name="issues_dismiss_all_text">Do you really want to dismiss all your issues?</string>
    <string name="issues">Issues</string>
    <string name="issue_pending">[legislation pending]</string>
    <string name="issue_dismissed">[dismissed]</string>
    <string name="could_not_get_issues">Couldn\'t fetch issues, please check your network connection and password.</string>
    <string name="no_issues">You have no issues currently</string>
    <string name="loading_issues">Fetching opinionated besser-wissers&#8230;</string>
    <string name="next_issue_in">Next issue expected %s</string>
    <string name="issue_detail">Issue</string>
    <string name="the_issue">The Issue</string>
    <string name="the_debate">The Debate</string>
    <string name="issue_choose_title">Choose option</string>
    <string name="issue_choose_text">Do you want to choose option %1$d?</string>
    <string name="issue_dismiss_title">Dismiss issue</string>
    <string name="issue_dismiss_text">Do you want to dismiss this issue?</string>
    <string name="loading_issue">Summoning indecision&#8230;</string>
    <string name="previous_choice">Previous choice</string>
    <string name="previously_dismissed">Previously dismissed</string>
    <string name="issue_loading">Loading&#8230;</string>
    <string name="the_talking_point">The Talking Point</string>
    <string name="recent_trends">Recent Trends</string>
    <string name="embassies">embassies</string>
    <string name="embassies_title">Embassies</string>
    <string name="loading_embassies">Avoiding interregional incident&#8230;</string>
    <string name="embassy_invited">invitation</string>
    <string name="embassy_pending">pending</string>
    <string name="embassy_requested">requested</string>
    <string name="embassy_rejected">rejected</string>
    <string name="embassy_closing">closing</string>
    <string name="officers">officers</string>
    <string name="officers_title">Officers</string>
    <string name="loading_officers">Waking cabinet&#8230;</string>
    <string name="dossier">Dossier</string>
    <string name="loading_dossier">Gathering intel&#8230;</string>
    <string name="ex_nation">Ex-nation</string>
    <string name="dossier_nations_header">Nations</string>
    <string name="dossier_regions_header">Regions</string>
    <string name="dossier_more">More</string>
    <string name="nation_added_to_dossier">Nation added to dossier</string>
    <string name="region_added_to_dossier">Region added to dossier</string>
    <string name="nation_removed_from_dossier">Nation removed from dossier</string>
    <string name="region_removed_from_dossier">Region removed from dossier</string>
    <string name="dossier_remove_nation_title">Remove nation from dossier</string>
    <string name="dossier_remove_nation_message">Are you sure you want to remove %1$s from your dossier?</string>
    <string name="dossier_remove_region_title">Remove region from dossier</string>
    <string name="dossier_remove_region_message">Are you sure you want to remove %1$s from your dossier?</string>
    <string name="dossier_remove">Remove</string>
    <string name="world">World</string>
    <string name="featured_region">Featured region</string>
    <string name="search_title">Search for a nation or region</string>
    <string name="search_hint">Nation/region name</string>
    <string name="search">Search</string>
    <string name="world_numbers">The world contains %1$d nations and %2$d regions.</string>
    <string name="searching">Leaving no stone unturned&#8230;</string>
    <string name="search_region_nations_label">Nations:</string>
    <string name="search_region_wad_label">WAD:</string>
    <string name="no_nation_found">No nation found</string>
    <string name="no_region_found">No region found</string>
    <string name="general_assembly">General Assembly</string>
    <string name="security_council">Security Council</string>
    <string name="voting_ends">Voting ends in %1$d %3$s %2$d %4$s</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_add_nation_to_dossier">Add to dossier</string>
    <string name="menu_endorse_nation">Endorse nation</string>
    <string name="menu_post">Post to RMB</string>
    <string name="menu_move_to_region">Move to region</string>
    <string name="menu_add_region_to_dossier">Add to dossier</string>
    <string name="test_nation_name" translatable="false">Laevendell</string>
    <string name="test_nation_pretitle" translatable="false">The Green Communes of</string>
    <string name="test_nation_category" translatable="false">Left-wing Utopia</string>
    <string name="test_nation_motto" translatable="false">What\'s mine is yours as well.</string>
    <string name="test_diplomat" translatable="false">Diplomat</string>
</resources>