<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_endorse_nation"
        android:title="@string/menu_endorse_nation"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:icon="@drawable/ic_menu_wa" />
    <item android:id="@+id/menu_add_nation_to_dossier"
        android:title="@string/menu_add_nation_to_dossier"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_add" />
    <item android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:orderInCategory="99"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_refresh" />
</menu>
