<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/nation_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" >

            <com.limewoodmedia.nsdroid.views.BannerView
                android:id="@+id/nation_banner"
                android:src="@drawable/test_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/nation_banner"/>

            <com.limewoodmedia.nsdroid.views.BannerView
                android:id="@+id/nation_flag"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nation_flag"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="9dp"
                android:layout_marginStart="9dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/test_flag" />

            <TextView
                android:id="@+id/nation_wa_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/wa_status"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginLeft="9dp"
                android:layout_marginStart="9dp"
                android:layout_alignBottom="@id/nation_banner"
                android:layout_alignParentRight="true"
                android:text="@string/wa_member"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/nation_pretitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nation_banner"
                android:fontFamily="serif"
                android:textSize="18sp"
                android:text="@string/test_nation_pretitle"
                style="@style/NationBasics" />

            <TextView
                android:id="@+id/nation_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nation_pretitle"
                android:fontFamily="serif"
                android:textSize="32sp"
                android:textStyle="bold"
                android:text="@string/test_nation_name"
                style="@style/NationBasics" />

            <TextView
                android:id="@+id/nation_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nation_name"
                android:fontFamily="Droid Sans"
                android:textSize="24sp"
                android:textColor="@color/faded"
                android:text="@string/test_nation_category"
                style="@style/NationBasics" />

            <TextView
                android:id="@+id/nation_motto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nation_category"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="9dp"
                android:fontFamily="Droid Sans"
                android:textSize="20sp"
                android:textStyle="italic"
                android:text="@string/test_nation_motto"
                style="@style/NationBasics"
                android:layout_centerHorizontal="true"
                android:layout_alignParentRight="false"/>

            <TextView
                android:id="@+id/nation_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nation_motto"
                android:fontFamily="Droid Sans"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="Democratic Socialist Assembly"
                android:textColorLink="@color/region_link"
                style="@style/CommonTextView"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="“"
                android:fontFamily="Droid Sans"
                android:layout_below="@id/nation_category"
                android:layout_above="@id/nation_region"
                android:layout_toLeftOf="@id/nation_motto"
                android:layout_toStartOf="@id/nation_motto"
                android:layout_marginTop="-12dp"
                style="@style/MottoQuote"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="”"
                android:fontFamily="Droid Sans"
                android:layout_below="@id/nation_category"
                android:layout_above="@id/nation_region"
                android:layout_toRightOf="@id/nation_motto"
                android:layout_toEndOf="@id/nation_motto"
                style="@style/MottoQuote"/>

            <LinearLayout
                android:id="@+id/nation_freedoms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="3dp"
                android:layout_below="@id/nation_region"
                android:orientation="vertical">

                <com.limewoodmedia.nsdroid.views.FreedomView
                    android:id="@+id/nation_civil_rights"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    app:label="@string/civil_rights"/>

                <com.limewoodmedia.nsdroid.views.FreedomView
                    android:id="@+id/nation_economy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    app:label="@string/economy"/>

                <com.limewoodmedia.nsdroid.views.FreedomView
                    android:id="@+id/nation_political_freedoms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:label="@string/political_freedoms"/>

            </LinearLayout>

            <TextView
                android:id="@+id/nation_influence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nation_freedoms"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/test_diplomat"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="3dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/nation_endorsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nation_freedoms"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/nation_endorsed"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp" />

            <TextView
                android:id="@+id/census_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/nation_influence"
                android:textSize="24dp"
                android:textStyle="bold"
                android:text="census"/>

            <LinearLayout
                android:id="@+id/census"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/census_title"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">

                <com.limewoodmedia.nsdroid.views.CensusView
                    android:id="@+id/world_rank"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="20dp"
                    app:censuslabel="@string/world_rank"
                    app:total="of 152200"/>

                <com.limewoodmedia.nsdroid.views.CensusView
                    android:id="@+id/region_rank"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    app:censuslabel="@string/region_rank"
                    app:total="of 201"/>

            </LinearLayout>

            <TextView
                android:id="@+id/nation_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/census"
                android:textSize="16sp"
                android:layout_margin="7dp" />

            <TextView
                android:id="@+id/nation_endorsements_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nation_description"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/endorsements_title"/>

            <TextView
                android:id="@+id/nation_endorsements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColorLink="@color/medium_green"
                android:layout_below="@id/nation_endorsements_title" />

        </RelativeLayout>

    </ScrollView>

    <include
        layout="@layout/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>