<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@android:color/white"
    android:layout_margin="7dp"
	android:layout_marginTop="5dp">

	<!--  This is the main content -->
	<LinearLayout
		android:id="@+id/fieldset"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@drawable/ns_frame"
		android:layout_marginTop="15dp">
    
        <TextView
            android:id="@+id/nation_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginRight="5dp"
            android:paddingLeft="9dp"
            android:text="@string/nation"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nation_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:paddingLeft="16dp"
            android:textSize="18sp"
            android:textStyle="italic"
            android:text="@string/category"
            android:paddingRight="9dp" />

        <TextView
            android:id="@+id/nation_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:paddingLeft="20dp"
            android:text="@string/region"
            android:textSize="16sp"
            android:paddingRight="9dp" />

    </LinearLayout>

    <!--  This is the title label -->
    <TextView
        android:id="@+id/wfe_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nation"
        style="@style/HappeningsTitle"
        android:layout_marginLeft="15dp"
        android:textColor="@android:color/black" />
</RelativeLayout>